attempt 1 to fix last note being covered by browser UI

--- a/src/index.css
+++ b/src/index.css
@@ -345,7 +345,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100.5vh;
   background-color: var(--clr-bg-light);
   position: fixed;
   top: 0;
@@ -367,7 +367,7 @@ body {
   margin-top: 20px;
   height: calc(100vh - 76px);
   overflow: auto;
-  padding-bottom: 20px;
+  padding-bottom: 60px;
   /* Removing scrollbar */
   -ms-overflow-style: none;
   scrollbar-width: none;
